# serializer version: 1
# name: test_plot_forest_basic
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'background': 'transparent',
      'header': dict({
        'labelFontSize': 13,
        'titleFontSize': 14,
      }),
      'legend': dict({
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'title': dict({
        'anchor': 'start',
        'fontSize': 18,
      }),
      'view': dict({
        'fill': 'transparent',
        'stroke': 'transparent',
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'category': 'All',
          'high': 0.98,
          'hr': 0.78,
          'low': 0.62,
          'subgroup': 'Overall',
        }),
        dict({
          'category': 'Female',
          'high': 0.99,
          'hr': 0.75,
          'low': 0.57,
          'subgroup': 'Female',
        }),
        dict({
          'category': 'Male',
          'high': 1.05,
          'hr': 0.8,
          'low': 0.61,
          'subgroup': 'Male',
        }),
        dict({
          'category': 'Old',
          'high': 1.11,
          'hr': 0.85,
          'low': 0.65,
          'subgroup': 'Age ≥ 65',
        }),
        dict({
          'category': 'Young',
          'high': 0.94,
          'hr': 0.72,
          'low': 0.55,
          'subgroup': 'Age < 65',
        }),
      ]),
      'data-normalized-1': list([
        dict({
        }),
      ]),
    }),
    'height': 150,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'datum': 1.0,
            'scale': dict({
              'type': 'log',
            }),
          }),
        }),
        'mark': dict({
          'color': '#333',
          'strokeWidth': 1.2,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'x': dict({
            'field': 'low',
            'scale': dict({
              'type': 'log',
            }),
            'title': 'Hazard Ratio',
            'type': 'quantitative',
          }),
          'x2': dict({
            'field': 'high',
          }),
          'y': dict({
            'axis': dict({
              'labelLimit': 200,
            }),
            'field': 'subgroup',
            'sort': None,
            'title': 'subgroup',
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'strokeWidth': 1.5,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'tooltip': list([
            dict({
              'field': 'subgroup',
              'type': 'nominal',
            }),
            dict({
              'field': 'hr',
              'format': '.3f',
              'title': 'Estimate',
              'type': 'quantitative',
            }),
            dict({
              'field': 'low',
              'format': '.3f',
              'title': 'Low',
              'type': 'quantitative',
            }),
            dict({
              'field': 'high',
              'format': '.3f',
              'title': 'High',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'hr',
            'scale': dict({
              'type': 'log',
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'subgroup',
            'sort': None,
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'filled': True,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 400,
  })
# ---
# name: test_plot_forest_custom_dims
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
      }),
      'view': dict({
        'continuousHeight': 300,
        'continuousWidth': 300,
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'category': 'All',
          'high': 0.98,
          'hr': 0.78,
          'low': 0.62,
          'subgroup': 'Overall',
        }),
        dict({
          'category': 'Female',
          'high': 0.99,
          'hr': 0.75,
          'low': 0.57,
          'subgroup': 'Female',
        }),
        dict({
          'category': 'Male',
          'high': 1.05,
          'hr': 0.8,
          'low': 0.61,
          'subgroup': 'Male',
        }),
        dict({
          'category': 'Old',
          'high': 1.11,
          'hr': 0.85,
          'low': 0.65,
          'subgroup': 'Age ≥ 65',
        }),
        dict({
          'category': 'Young',
          'high': 0.94,
          'hr': 0.72,
          'low': 0.55,
          'subgroup': 'Age < 65',
        }),
      ]),
      'data-normalized-1': list([
        dict({
        }),
      ]),
    }),
    'height': 200,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'datum': 1.0,
            'scale': dict({
              'type': 'log',
            }),
          }),
        }),
        'mark': dict({
          'color': '#333',
          'strokeWidth': 1.2,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'x': dict({
            'field': 'low',
            'scale': dict({
              'type': 'log',
            }),
            'title': 'hr',
            'type': 'quantitative',
          }),
          'x2': dict({
            'field': 'high',
          }),
          'y': dict({
            'axis': dict({
              'labelLimit': 200,
            }),
            'field': 'subgroup',
            'sort': None,
            'title': 'subgroup',
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'strokeWidth': 1.5,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'tooltip': list([
            dict({
              'field': 'subgroup',
              'type': 'nominal',
            }),
            dict({
              'field': 'hr',
              'format': '.3f',
              'title': 'Estimate',
              'type': 'quantitative',
            }),
            dict({
              'field': 'low',
              'format': '.3f',
              'title': 'Low',
              'type': 'quantitative',
            }),
            dict({
              'field': 'high',
              'format': '.3f',
              'title': 'High',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'hr',
            'scale': dict({
              'type': 'log',
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'subgroup',
            'sort': None,
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'filled': True,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'title': 'Custom dims',
    'width': 600,
  })
# ---
# name: test_plot_forest_preserves_order
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'background': 'transparent',
      'header': dict({
        'labelFontSize': 13,
        'titleFontSize': 14,
      }),
      'legend': dict({
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'title': dict({
        'anchor': 'start',
        'fontSize': 18,
      }),
      'view': dict({
        'fill': 'transparent',
        'stroke': 'transparent',
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'est': 0.8,
          'hi': 1.0,
          'label': 'B',
          'lo': 0.6,
        }),
        dict({
          'est': 0.9,
          'hi': 1.1,
          'label': 'A',
          'lo': 0.7,
        }),
        dict({
          'est': 1.05,
          'hi': 1.3,
          'label': 'M',
          'lo': 0.85,
        }),
        dict({
          'est': 1.2,
          'hi': 1.6,
          'label': 'Z',
          'lo': 0.9,
        }),
        dict({
          'est': 1.3,
          'hi': 1.7,
          'label': 'Y',
          'lo': 1.0,
        }),
      ]),
      'data-normalized-1': list([
        dict({
        }),
      ]),
    }),
    'height': 150,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'datum': 1.0,
            'scale': dict({
              'type': 'log',
            }),
          }),
        }),
        'mark': dict({
          'color': '#333',
          'strokeWidth': 1.2,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'x': dict({
            'field': 'lo',
            'scale': dict({
              'type': 'log',
            }),
            'title': 'est',
            'type': 'quantitative',
          }),
          'x2': dict({
            'field': 'hi',
          }),
          'y': dict({
            'axis': dict({
              'labelLimit': 200,
            }),
            'field': 'label',
            'sort': None,
            'title': 'label',
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'strokeWidth': 1.5,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'tooltip': list([
            dict({
              'field': 'label',
              'type': 'nominal',
            }),
            dict({
              'field': 'est',
              'format': '.3f',
              'title': 'Estimate',
              'type': 'quantitative',
            }),
            dict({
              'field': 'lo',
              'format': '.3f',
              'title': 'Low',
              'type': 'quantitative',
            }),
            dict({
              'field': 'hi',
              'format': '.3f',
              'title': 'High',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'est',
            'scale': dict({
              'type': 'log',
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'label',
            'sort': None,
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'filled': True,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 400,
  })
# ---
# name: test_plot_forest_sort_col
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'background': 'transparent',
      'header': dict({
        'labelFontSize': 13,
        'titleFontSize': 14,
      }),
      'legend': dict({
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'title': dict({
        'anchor': 'start',
        'fontSize': 18,
      }),
      'view': dict({
        'fill': 'transparent',
        'stroke': 'transparent',
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'category': 'All',
          'high': 0.98,
          'hr': 0.78,
          'low': 0.62,
          'subgroup': 'Overall',
        }),
        dict({
          'category': 'Female',
          'high': 0.99,
          'hr': 0.75,
          'low': 0.57,
          'subgroup': 'Female',
        }),
        dict({
          'category': 'Male',
          'high': 1.05,
          'hr': 0.8,
          'low': 0.61,
          'subgroup': 'Male',
        }),
        dict({
          'category': 'Old',
          'high': 1.11,
          'hr': 0.85,
          'low': 0.65,
          'subgroup': 'Age ≥ 65',
        }),
        dict({
          'category': 'Young',
          'high': 0.94,
          'hr': 0.72,
          'low': 0.55,
          'subgroup': 'Age < 65',
        }),
      ]),
      'data-normalized-1': list([
        dict({
        }),
      ]),
    }),
    'height': 150,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'datum': 1.0,
            'scale': dict({
              'type': 'log',
            }),
          }),
        }),
        'mark': dict({
          'color': '#333',
          'strokeWidth': 1.2,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'x': dict({
            'field': 'low',
            'scale': dict({
              'type': 'log',
            }),
            'title': 'hr',
            'type': 'quantitative',
          }),
          'x2': dict({
            'field': 'high',
          }),
          'y': dict({
            'axis': dict({
              'labelLimit': 200,
            }),
            'field': 'subgroup',
            'sort': dict({
              'field': 'hr',
              'order': 'descending',
            }),
            'title': 'subgroup',
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'strokeWidth': 1.5,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'tooltip': list([
            dict({
              'field': 'subgroup',
              'type': 'nominal',
            }),
            dict({
              'field': 'hr',
              'format': '.3f',
              'title': 'Estimate',
              'type': 'quantitative',
            }),
            dict({
              'field': 'low',
              'format': '.3f',
              'title': 'Low',
              'type': 'quantitative',
            }),
            dict({
              'field': 'high',
              'format': '.3f',
              'title': 'High',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'hr',
            'scale': dict({
              'type': 'log',
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'subgroup',
            'sort': dict({
              'field': 'hr',
              'order': 'descending',
            }),
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'filled': True,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 400,
  })
# ---
# name: test_plot_forest_with_color
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'background': 'transparent',
      'header': dict({
        'labelFontSize': 13,
        'titleFontSize': 14,
      }),
      'legend': dict({
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'title': dict({
        'anchor': 'start',
        'fontSize': 18,
      }),
      'view': dict({
        'fill': 'transparent',
        'stroke': 'transparent',
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'category': 'All',
          'high': 0.98,
          'hr': 0.78,
          'low': 0.62,
          'subgroup': 'Overall',
        }),
        dict({
          'category': 'Female',
          'high': 0.99,
          'hr': 0.75,
          'low': 0.57,
          'subgroup': 'Female',
        }),
        dict({
          'category': 'Male',
          'high': 1.05,
          'hr': 0.8,
          'low': 0.61,
          'subgroup': 'Male',
        }),
        dict({
          'category': 'Old',
          'high': 1.11,
          'hr': 0.85,
          'low': 0.65,
          'subgroup': 'Age ≥ 65',
        }),
        dict({
          'category': 'Young',
          'high': 0.94,
          'hr': 0.72,
          'low': 0.55,
          'subgroup': 'Age < 65',
        }),
      ]),
      'data-normalized-1': list([
        dict({
        }),
      ]),
    }),
    'height': 150,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'datum': 1.0,
            'scale': dict({
              'type': 'log',
            }),
          }),
        }),
        'mark': dict({
          'color': '#333',
          'strokeWidth': 1.2,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'field': 'category',
            'type': 'nominal',
          }),
          'x': dict({
            'field': 'low',
            'scale': dict({
              'type': 'log',
            }),
            'title': 'hr',
            'type': 'quantitative',
          }),
          'x2': dict({
            'field': 'high',
          }),
          'y': dict({
            'axis': dict({
              'labelLimit': 200,
            }),
            'field': 'subgroup',
            'sort': None,
            'title': 'subgroup',
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'strokeWidth': 1.5,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'field': 'category',
            'type': 'nominal',
          }),
          'tooltip': list([
            dict({
              'field': 'subgroup',
              'type': 'nominal',
            }),
            dict({
              'field': 'category',
              'type': 'nominal',
            }),
            dict({
              'field': 'hr',
              'format': '.3f',
              'title': 'Estimate',
              'type': 'quantitative',
            }),
            dict({
              'field': 'low',
              'format': '.3f',
              'title': 'Low',
              'type': 'quantitative',
            }),
            dict({
              'field': 'high',
              'format': '.3f',
              'title': 'High',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'hr',
            'scale': dict({
              'type': 'log',
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'subgroup',
            'sort': None,
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'filled': True,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 400,
  })
# ---
# name: test_plot_forest_with_min_effect
  dict({
    '$schema': 'https://vega.github.io/schema/vega-lite/v6.1.0.json',
    'config': dict({
      'axis': dict({
        'gridColor': 'gray',
        'gridDash': list([
          3,
          3,
        ]),
        'gridOpacity': 0.5,
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'background': 'transparent',
      'header': dict({
        'labelFontSize': 13,
        'titleFontSize': 14,
      }),
      'legend': dict({
        'labelFontSize': 12,
        'titleFontSize': 14,
      }),
      'title': dict({
        'anchor': 'start',
        'fontSize': 18,
      }),
      'view': dict({
        'fill': 'transparent',
        'stroke': 'transparent',
        'strokeWidth': 0,
      }),
    }),
    'datasets': dict({
      'data-normalized-0': list([
        dict({
          'category': 'All',
          'high': 0.98,
          'hr': 0.78,
          'low': 0.62,
          'subgroup': 'Overall',
        }),
        dict({
          'category': 'Female',
          'high': 0.99,
          'hr': 0.75,
          'low': 0.57,
          'subgroup': 'Female',
        }),
        dict({
          'category': 'Male',
          'high': 1.05,
          'hr': 0.8,
          'low': 0.61,
          'subgroup': 'Male',
        }),
        dict({
          'category': 'Old',
          'high': 1.11,
          'hr': 0.85,
          'low': 0.65,
          'subgroup': 'Age ≥ 65',
        }),
        dict({
          'category': 'Young',
          'high': 0.94,
          'hr': 0.72,
          'low': 0.55,
          'subgroup': 'Age < 65',
        }),
      ]),
      'data-normalized-1': list([
        dict({
        }),
      ]),
    }),
    'height': 150,
    'layer': list([
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'datum': 1.0,
            'scale': dict({
              'type': 'log',
            }),
          }),
        }),
        'mark': dict({
          'color': '#333',
          'strokeWidth': 1.2,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'datum': 0.8,
            'scale': dict({
              'type': 'log',
            }),
          }),
        }),
        'mark': dict({
          'color': '#888',
          'strokeDash': list([
            4,
            4,
          ]),
          'strokeWidth': 1.0,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-1',
        }),
        'encoding': dict({
          'x': dict({
            'datum': 1.25,
            'scale': dict({
              'type': 'log',
            }),
          }),
        }),
        'mark': dict({
          'color': '#888',
          'strokeDash': list([
            4,
            4,
          ]),
          'strokeWidth': 1.0,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'x': dict({
            'field': 'low',
            'scale': dict({
              'type': 'log',
            }),
            'title': 'hr',
            'type': 'quantitative',
          }),
          'x2': dict({
            'field': 'high',
          }),
          'y': dict({
            'axis': dict({
              'labelLimit': 200,
            }),
            'field': 'subgroup',
            'sort': None,
            'title': 'subgroup',
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'strokeWidth': 1.5,
          'type': 'rule',
        }),
      }),
      dict({
        'data': dict({
          'name': 'data-normalized-0',
        }),
        'encoding': dict({
          'color': dict({
            'value': 'steelblue',
          }),
          'tooltip': list([
            dict({
              'field': 'subgroup',
              'type': 'nominal',
            }),
            dict({
              'field': 'hr',
              'format': '.3f',
              'title': 'Estimate',
              'type': 'quantitative',
            }),
            dict({
              'field': 'low',
              'format': '.3f',
              'title': 'Low',
              'type': 'quantitative',
            }),
            dict({
              'field': 'high',
              'format': '.3f',
              'title': 'High',
              'type': 'quantitative',
            }),
          ]),
          'x': dict({
            'field': 'hr',
            'scale': dict({
              'type': 'log',
            }),
            'type': 'quantitative',
          }),
          'y': dict({
            'field': 'subgroup',
            'sort': None,
            'type': 'nominal',
          }),
        }),
        'mark': dict({
          'filled': True,
          'size': 60,
          'type': 'point',
        }),
      }),
    ]),
    'width': 400,
  })
# ---
